# plugin

./: .gitignore  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  README.md  SwapFields.cpp  Vagrantfile  bootstrap.sh  doxygen.config  rand-seed.py  randstruct.cpp
.github/ISSUE_TEMPLATE/: bug_report.md
catch/: testing.cpp  tests  tests-main.cpp  tests.cpp
poc/: Makefile  poc.c
src/: CMakeCache.txt  CMakeLists.txt  Makefile  bucket.cpp  bucket.h  cmake_install.cmake  plugin.cpp  randstruct.cpp  randstruct.h
src/src/: Makefile  cmake_install.cmake
tests/: CMakeLists.txt  diff_testing.py  randstruct_tests.cpp
